--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,12 @@
 FAECBOOK_CALLBACK=http://localhost:3000/auth/facebook/callback
 SESSION_SECRET=ThisIsMySecret
+
+# 這份專案因為資安和保密等因素，有ignore MONGODB_URI 連結
+# 請建立自己的資料庫
+# 參考格式如下：
+# MONGODB_URI=mongodb+srv://使用者帳號:使用者密碼@ MongoDB 資料庫的主機名稱/資料庫名稱?retryWrites=true&w=majority
+
+# This project has ignored the MONGODB_URI connection due to security and confidentiality reasons.
+# Please create your own database.
+# Refer to the format below:
+# MONGODB_URI=mongodb+srv://username:password@mongodb-hostname/database-name?retryWrites=true&w=majority
