--- a/package.json
+++ b/package.json
@@ -23,9 +23,8 @@
     "mongoose": "^5.9.7",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
-    "passport-local": "^1.0.0"
-  },
-  "devDependencies": {
+    "passport-local": "^1.0.0",
     "dotenv": "^8.2.0"
-  }
+  },
+  "devDependencies": {}
 }
